2006-02-15  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Anders.
        
        - remove some voodoo code

        * WebView/WebDataSource.m:
        (-[WebDataSource _setLoading:]): Removed useless ref/deref of self and WebView.
        A WebDataSource cannot be loading unless it is still connected to the WebView that
        owns it and retained by it, because getting disconnected stops loading.

2006-02-13  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Anders.
        
        Improvements to frame loading:
        
        - remove LayoutAcceptable state entirely
        - fix WebImageView to work right without LayoutAcceptable state
        - move guts of commitIfReady: to WebFrame
        - try to separate page cache loading from normal loading a bit more

        * English.lproj/StringsNotToBeLocalized.txt:
        * WebView/WebDataSource.m:
        (-[WebDataSource _prepareForLoadStart]):
        (-[WebDataSource _loadFromPageCache:]):
        (-[WebDataSource _startLoading]):
        (-[WebDataSource _commitIfReady]):
        (-[WebDataSource _setupForReplaceByMIMEType:]):
        * WebView/WebDataSourcePrivate.h:
        * WebView/WebFrame.m:
        (-[WebFrame _transitionToCommitted:]):
        (-[WebFrame _commitProvisionalLoad:]):
        (-[WebFrame _checkLoadCompleteForThisFrame]):
        (-[WebFrame _continueLoadRequestAfterNavigationPolicy:formState:]):
        * WebView/WebFramePrivate.h:
        * WebView/WebImageRepresentation.h:
        * WebView/WebImageRepresentation.m:
        * WebView/WebImageView.m:
        (-[WebImageView dataSourceUpdated:]):
        (-[WebImageView setNeedsLayout:]):
        (-[WebImageView writeImageToPasteboard:types:]):
        (-[WebImageView copy:]):
        (-[WebImageView mouseDragged:]):
        * WebView/WebView.m:
        (-[WebView _finishedLoadingResourceFromDataSource:]):
        (-[WebView _mainReceivedBytesSoFar:fromDataSource:complete:]):
